--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div class="sticky-nav-right">
             <button class="badge nav-item hide">Explore Premium</button>
-            <button class="badge nav-item dark-badge">
+            <button class="badge nav-item dark-badge" onclick="goPlayStore()" id="installbtn">
               <i class="fa-solid fa-download" style="margin-right: 5px"></i
               >Install App
             </button>
@@ -159,7 +159,7 @@
             <section class="albm-song">Mahiye Jinna Sohna</section>
             <section class="albm-singer">Darshan Raval</section>
           </section>
-          <i class="fa-regular fa-heart"></i>
+          <div class="heartGlow" id="heartGlowID" onclick="makeLike()"><i class="fa-regular fa-heart"></i></div>
         </div>
         <div class="player">
           <div class="player-controls">
@@ -194,5 +194,7 @@
         </div>
       </div>
     </div>
+    <!-- Adding Javascript -->
+    <script src="script.js"></script>
   </body>
 </html>
