--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <span class="material-symbols-outlined"> cast </span>
           <span class="material-symbols-outlined"> speaker </span>
           <span class="material-symbols-outlined"> volume_up </span>
-          <input  type="range" min="1" max="10" step="1" />
+          <input type="range" id="scrollable-input" min="1" max="10" step="1" />
         </div>
       </div>
     </div>
