--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
         <div class="player">
           <div class="player-controls">
-            <img src="/Assets/player_icon1.png" class="player-control-icon" id="player-icon-id1"/>
+            <img src="/Assets/player_icon1.png" alt="pl1" class="player-control-icon" id="player-icon-id1"/>
             <img src="/Assets/player_icon2.png" class="player-control-icon"id="player-icon-id2" />
             <img
               src="/Assets/player_icon3.png"
@@ -195,7 +195,7 @@
           <span class="material-symbols-outlined"> cast </span>
           <span class="material-symbols-outlined"> speaker </span>
           <span class="material-symbols-outlined"> volume_up </span>
-          <input type="range" id="scrollable-input" min="1" max="10" step="1" />
+          <input class="custom-range-slider" type="range" id="scrollable-input" min="1" max="10" step="1" />
         </div>
       </div>
     </div>
